<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="10dp">

    <com.unfc.choicecustomercare.view.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/menu_change_pin"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/log_out_message"/>

    <com.unfc.choicecustomercare.view.CustomEditText
        android:id="@+id/change_password_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:padding="@dimen/edt_padding"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/edt_text"/>

    <com.unfc.choicecustomercare.view.CustomEditText
        android:id="@+id/change_password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="@dimen/edt_padding"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/edt_text"/>

    <com.unfc.choicecustomercare.view.CustomEditText
        android:id="@+id/change_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="@dimen/edt_padding"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/edt_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.unfc.choicecustomercare.view.CustomClickTextView
            android:id="@+id/change_password_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/message_decline_bg"
            android:gravity="center"
            android:padding="@dimen/message_button_padding"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/message_item_text"/>

        <View
            android:layout_width="10dp"
            android:layout_height="1dp"/>

        <com.unfc.choicecustomercare.view.CustomClickTextView
            android:id="@+id/change_password_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/message_accept_bg"
            android:gravity="center"
            android:padding="@dimen/message_button_padding"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/message_item_text"/>
    </LinearLayout>

</LinearLayout>