<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <com.unfc.choicecustomercare.view.CustomEditText
            android:id="@+id/sign_in_email_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_number"
            android:padding="@dimen/edt_padding"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/edt_text"/>

        <com.unfc.choicecustomercare.view.CustomEditText
            android:id="@+id/sign_in_pin_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/pin_code"
            android:inputType="textPassword"
            android:padding="@dimen/edt_padding"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/edt_text"/>

        <com.unfc.choicecustomercare.view.CustomClickTextView
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/color_primary"
            android:gravity="center"
            android:padding="@dimen/button_padding"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text"
            android:textStyle="bold"/>

        <com.unfc.choicecustomercare.view.CustomClickTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/no_account_message"
            android:textColor="@color/black"
            android:textSize="@dimen/log_in_text"/>

        <com.unfc.choicecustomercare.view.CustomClickTextView
            android:id="@+id/sign_in_click_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_here"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/log_in_text"/>
    </LinearLayout>
</LinearLayout>