<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <com.unfc.choicecustomercare.view.CustomEditText
            android:id="@+id/sign_up_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_content_border"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="@dimen/edt_padding"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/edt_text"/>

        <com.unfc.choicecustomercare.view.CustomEditText
            android:id="@+id/sign_up_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/main_content_border"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="@dimen/edt_padding"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/edt_text"/>

        <com.unfc.choicecustomercare.view.CustomEditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/main_content_border"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/edt_padding"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/edt_text"/>

        <com.unfc.choicecustomercare.view.CustomEditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/main_content_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/edt_padding"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/edt_text"/>

        <com.unfc.choicecustomercare.view.CustomEditText
            android:id="@+id/sign_up_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/main_content_border"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/edt_padding"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/edt_text"/>

        <Spinner
            android:id="@+id/sign_up_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/main_content_border"/>

        <com.unfc.choicecustomercare.view.CustomClickTextView
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/color_primary"
            android:gravity="center"
            android:padding="@dimen/button_padding"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>