<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="10dp">

    <com.unfc.choicecustomercare.view.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/log_off_message"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/log_out_message"/>

    <LinearLayout
        android:id="@+id/message_button_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">


        <com.unfc.choicecustomercare.view.CustomClickTextView
            android:id="@+id/log_out_no_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/message_decline_bg"
            android:gravity="center"
            android:padding="@dimen/message_button_padding"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="@dimen/message_item_text"/>

        <View
            android:layout_width="10dp"
            android:layout_height="1dp"/>

        <com.unfc.choicecustomercare.view.CustomClickTextView
            android:id="@+id/log_out_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/message_accept_bg"
            android:gravity="center"
            android:padding="@dimen/message_button_padding"
            android:text="@string/log_off"
            android:textColor="@color/white"
            android:textSize="@dimen/message_item_text"/>
    </LinearLayout>

</LinearLayout>